# onomato-tabata

./: .gitignore  CLAUDE.md  README.md
bpm-analyzer/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  LICENSE  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_project.py  test_audio.jams  test_audio_output.csv  test_audio_output.json  youtube_16min_tabata_song_example.jams
bpm-analyzer/batch_output/: test_audio.jams
bpm-analyzer/bpm_analyzer/: __init__.py  __main__.py  cli.py  config.py  version.py
bpm-analyzer/bpm_analyzer/algorithms/: __init__.py  aubio_impl.py  base.py  ensemble.py  essentia_impl.py  librosa_impl.py  madmom_impl.py
bpm-analyzer/bpm_analyzer/core/: __init__.py  analyzer.py  exceptions.py  tempo_map.py
bpm-analyzer/bpm_analyzer/db/: __init__.py  database.py  models.py
bpm-analyzer/bpm_analyzer/io/: __init__.py  audio_loader.py
bpm-analyzer/bpm_analyzer/processors/: __init__.py  batch.py  cache.py  parallel.py
bpm-analyzer/bpm_analyzer/utils/: __init__.py  audio_utils.py  logging.py  validation.py
bpm-analyzer/docs/: core-skeleton.py  installation.md  project-plan.md  repo-structure.md  testing.md
bpm-analyzer/examples/: basic_usage.py
bpm-analyzer/tests/: __init__.py  conftest.py  test_algorithms.py  test_batch_processing.py  test_cli.py  test_config.py  test_core_analyzer.py  test_database.py  test_integration.py  test_tempo_map.py  test_utils.py
