[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpm-analyzer"
version = "0.1.0"
description = "High-precision audio tempo analysis for workout synchronization"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
requires-python = ">=3.8"
keywords = ["audio", "music", "bpm", "tempo", "beat-tracking", "mir"]

dependencies = [
    "numpy>=1.24.0",
    "madmom>=0.16.1",
    "librosa>=0.10.0",
    "jams>=0.3.4",
    "soundfile>=0.12.0",
    "pydub>=0.25.1",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
]

[project.optional-dependencies]
all = [
    "essentia>=2.1b6",
    "aubio>=0.4.9",
    "psycopg2-binary>=2.9.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "pre-commit>=3.3.0",
    "ipython>=8.0.0",
    "types-pyyaml",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/bpm-analyzer"
Documentation = "https://bpm-analyzer.readthedocs.io"
Repository = "https://github.com/yourusername/bpm-analyzer"
Issues = "https://github.com/yourusername/bpm-analyzer/issues"

[project.scripts]
bpm-analyzer = "bpm_analyzer.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["bpm_analyzer*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=bpm_analyzer --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["bpm_analyzer"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
